--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -39649,9 +39649,9 @@
 	<key>NSWindow Frame SharedPreferences</key>
 	<string>706 1015 918 381 0 0 2560 1440 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>1708 11 906 396 0 0 2560 1440 </string>
+	<string>1708 4 850 424 0 0 2560 1440 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>1708 4 850 1436 0 0 2560 1440 </string>
+	<string>1281 28 1277 1412 0 0 2560 1440 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
 	<string>1 1044 906 396 0 0 2560 1440 </string>
 	<key>New Bookmarks</key>
@@ -41904,13 +41904,13 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-10-16T18:29:38Z</date>
+	<date>2017-10-25T18:29:12Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>Selection Respects Soft Boundaries</key>
 	<true/>
 	<key>ShowFullScreenTabBar</key>
-	<false/>
+	<true/>
 	<key>ShowPaneTitles</key>
 	<false/>
 	<key>SplitPaneDimmingAmount</key>
@@ -41928,7 +41928,7 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.1.3</string>
+	<string>3.1.4</string>
 	<key>kCPKSelectionViewPreferredModeKey</key>
 	<integer>7</integer>
 	<key>kCPKSelectionViewShowHSBTextFieldsKey</key>
