--- a/.muttrc
+++ b/.muttrc
@@ -31,14 +31,15 @@ set pipe_decode          # strip headers and eval mimes when piping
 set thorough_search      # strip headers and eval mimes before searching
 
 # Sidebar Patch --------------------------------------
-set sidebar_visible 	= yes
-set sidebar_format 		= "%B%?F? [%F]?%* %?N?%N/?%S"
-set mail_check_stats
-set sidebar_width   	= 25
+set sidebar_visible 						= yes
+set sidebar_format 							= "%B%?F? [%F]?%* %?N?%N/?%S"
+set mail_check_stats						= yes
+set mail_check_stats_interval		= 300
+set sidebar_width   						= 25
 set sidebar_short_path
-set sidebar_delim_chars="/"
+set sidebar_delim_chars					= "/"
 set sidebar_folder_indent
-set sidebar_indent_string="  "
+set sidebar_indent_string				= "  "
 
 # Status Bar -----------------------------------------
 set status_chars  = " *%A"
@@ -77,10 +78,9 @@ set postponed 						= "imaps://imap.mail.yahoo.com/Drafts"
 set record								= "imaps://imap.mail.yahoo.com/Sent"
 set smtp_url							= "smtp://rodrigo_plp@yahoo.com@smtp.yahoo.com:587"
 set from									= "rodrigo_plp@yahoo.com"
+set sidebar_sort_method		= name
 
-set editor								= 'vim + -c "set textwidth=72" -c "set wrap"'
-
-mailboxes	"imaps://imap.mail.yahoo.com/INBOX"
+set editor								= 'vim + -c "set textwidth=100" -c "set wrap"'
 
 # # Default inbox.
 # set spoolfile = "+steve-stevelosh.com/INBOX"
@@ -103,16 +103,16 @@ mailboxes	"imaps://imap.mail.yahoo.com/INBOX"
 # set postponed = "+steve-stevelosh.com/drafts"
 
 # Index View Options ---------------------------------
-set date_format = "%e %b/%y %H:%M"
-set index_format = "[%Z]  %D  %-20.20F  %s"
-set sort = threads                         # like gmail
-set sort_aux = reverse-last-date-received  # like gmail
-set uncollapse_jump                        # don't collapse on an unread message
-set sort_re                                # thread based on regex
-set reply_regexp = "^(([Rr][Ee]?(\[[0-9]+\])?: *)?(\[[^]]+\] *)?)*"
+set date_format 		= "%e %b/%y %H:%M"
+set index_format 		= "[%Z]  %D  %-20.20F  %s"
+set sort 						= threads                         # like gmail
+set sort_aux 				= reverse-last-date-received  		# like gmail
+set uncollapse_jump                        						# don't collapse on an unread message
+set sort_re                                						# thread based on regex
+set reply_regexp 		= "^(([Rr][Ee]?(\[[0-9]+\])?: *)?(\[[^]]+\] *)?)*"
 
 # Index Key Bindings ---------------------------------
-bind index g noop
+bind index g 				noop
 bind index gg 			first-entry
 bind index G        last-entry
 
@@ -124,16 +124,12 @@ bind index <space>  collapse-thread
 macro index \Cr "T~U<enter><tag-prefix><clear-flag>N<untag-pattern>.<enter>" "mark all messages as read"
 
 # Sync email
-macro index O "<shell-escape>offlineimap<enter>"           "run offlineimap to sync all mail"
-macro index o "<shell-escape>offlineimap -qf INBOX<enter>" "run offlineimap to sync inbox"
+# macro index O "<shell-escape>offlineimap<enter>"           "run offlineimap to sync all mail"
+# macro index o "<shell-escape>offlineimap -qf INBOX<enter>" "run offlineimap to sync inbox"
 
 # Saner copy/move dialogs
 macro index C "<copy-message>?<toggle-mailboxes>" "copy a message to a mailbox"
 macro index M "<save-message>?<toggle-mailboxes>" "move a message to a mailbox"
-
-# Sidebar coloring
-color sidebar_new green black
-color normal black default
 
 # Sidebar Navigation ---------------------------------
 bind index <down>   sidebar-next
@@ -143,7 +139,7 @@ bind index,pager B sidebar-toggle-visible
 
 # Pager View Options ---------------------------------
 set pager_index_lines = 10 # number of index lines to show
-set pager_context = 3      # number of context lines to show
+set pager_context 		= 3  # number of context lines to show
 set pager_stop             # don't go to next message automatically
 set menu_scroll            # scroll in menus
 set tilde                  # show tildes like in vim
@@ -155,7 +151,7 @@ alternative_order text/plain text/enriched text/html"}})"
 # Pager Key Bindings ---------------------------------
 bind pager k  previous-line
 bind pager j  next-line
-bind pager g noop
+bind pager g  noop
 bind pager gg top
 bind pager G  bottom
 
@@ -166,16 +162,16 @@ bind attach <return> view-mailcap
 
 # Colors ---------------------------------------------
 
-color normal brightyellow default
+color normal color245 default
 color error red default
 color tilde black default
 color message cyan default
 color markers red white
-color attachment white default
+color attachment green default
 color search brightmagenta default
-color status brightyellow black
-color indicator brightblack yellow
-color tree yellow default
+color status green black
+color indicator color033 default
+color tree green default
 
 # Basic monocolor screen
 
@@ -184,48 +180,59 @@ mono underline underline
 mono indicator reverse
 mono error bold
 
+# Sidebar
+
+color sidebar_new green default
+color sidebar_divider green default
+color sidebar_indicator color033 default
+color sidebar_ordinary color242 default
+
 # Index
 
-color index red default "~A" # all messages
-color index brightred default "~E" # expired messages
-color index blue default "~N" # new messages
-color index blue default "~O" # old messages
-color index brightmagenta default "~Q" # messages that have been replied to
-color index brightgreen default "~R" # read messages
-color index blue default "~U" # unread messages
-color index blue default "~U~$" # unread, unreferenced messages
-color index brightyellow default "~v" # messages part of a collapsed thread
-color index brightyellow default "~P" # messages from me
-color index cyan default "~p!~F" # messages to me
-color index cyan default "~N~p!~F" # new messages to me
-color index cyan default "~U~p!~F" # unread messages to me
-color index brightgreen default "~R~p!~F" # messages to me
-color index red default "~F" # flagged messages
-color index red default "~F~p" # flagged messages to me
-color index red default "~N~F" # new flagged messages
-color index red default "~N~F~p" # new flagged messages to me
-color index red default "~U~F~p" # new flagged messages to me
-color index black red "~D" # deleted messages
-color index brightcyan default "~v~(!~N)" # collapsed thread with no unread
-color index yellow default "~v~(~N)" # collapsed thread with some unread
-color index green default "~N~v~(~N)" # collapsed thread with unread parent
-color index red black "~v~(~F)!~N" # collapsed thread with flagged, no unread
-color index yellow black "~v~(~F~N)" # collapsed thread with some unread & flagged
-color index green black "~N~v~(~F~N)" # collapsed thread with unread parent & flagged
-color index green black "~N~v~(~F)" # collapsed thread with unread parent, no unread inside, but some flagged
-color index cyan black "~v~(~p)" # collapsed thread with unread parent, no unread inside, some to me directly
-color index yellow red "~v~(~D)" # thread with deleted (doesn't differentiate between all or partial)
+color index red default "~A" 								# all messages
+color index brightred default "~E" 					# expired messages
+color index green default "~N" 							# new messages
+# color index blue default "~O" 						# old messages
+color index brightmagenta default "~Q" 			# messages that have been replied to
+color index color242 default "~R" 					# read messages
+color index green default "~U" 							# unread messages
+color index green default "~U~$" 						# unread, unreferenced messages
+color index brightyellow default "~v" 			# messages part of a collapsed thread
+# color index brightyellow default "~P" 			# messages from me
+# color index cyan default "~p!~F" 					# messages to me
+# color index cyan default "~N~p!~F" 					# new messages to me
+color index color028 default "~U~p!~F" 			# unread messages to me, dark green
+# color index green default "~R~p!~F" 			# messages to me
+color index red default "~F" 								# flagged messages
+color index red default "~F~p" 							# flagged messages to me
+color index red default "~N~F" 							# new flagged messages
+color index red default "~N~F~p" 						# new flagged messages to me
+color index red default "~U~F~p" 						# new flagged messages to me
+color index red default "~D" 								# deleted messages
+color index brightcyan default "~v~(!~N)" 	# collapsed thread with no unread
+color index yellow default "~v~(~N)" 				# collapsed thread with some unread
+color index green default "~N~v~(~N)" 			# collapsed thread with unread parent
+color index red black "~v~(~F)!~N" 					# collapsed thread with flagged, no unread
+color index yellow black "~v~(~F~N)" 				# collapsed thread with some unread & flagged
+color index color242 default "~N~v~(~F~N)" 	# collapsed thread with unread parent & flagged
+color index color242 default "~N~v~(~F)" 		# collapsed thread with unread parent, no unread inside, but some flagged
+color index cyan black "~v~(~p)" 						# collapsed thread with unread parent, no unread inside, some to me directly
+color index red default "~v~(~D)" 					# thread with deleted (doesn't differentiate between all or partial)
+color index_author color028 default '.*'		# dark green author name
+color index_flags color028 default '.*'			# dark green message flags
 
 # Message Headers
 
 color hdrdefault brightgreen default
-color header blue default "^(From)"
-color header blue default "^(Subject)"
+color header color242 default "^(From)"
+color header color242 default "^(To)"
+color header color242 default "^(Date)"
+color header color028 default "^(Subject)"
 
 # Body
 
-color quoted blue default
-color quoted1 cyan default
+color quoted color172 default
+color quoted1 color130 default
 color quoted2 yellow default
 color quoted3 red default
 color quoted4 brightred default
@@ -233,7 +240,6 @@ color quoted4 brightred default
 color signature brightgreen default
 color bold black default
 color underline black default
-color normal default default
 
 # PGP
 
@@ -247,7 +253,7 @@ mono body bold "^gpg: BAD signature from.*"
 
 # URL Regex
 
-color body red default "([a-z][a-z0-9+-]*://(((([a-z0-9_.!~*'();:&=+$,-]|%[0-9a-f][0-9a-f])*@)?((([a-z0-9]([a-z0-9-]*[a-z0-9])?)\\.)*([a-z]([a-z0-9-]*[a-z0-9])?)\\.?|[0-9]+\\.[0-9]+\\.[0-9]+\\.[0-9]+)(:[0-9]+)?)|([a-z0-9_.!~*'()$,;:@&=+-]|%[0-9a-f][0-9a-f])+)(/([a-z0-9_.!~*'():@&=+$,-]|%[0-9a-f][0-9a-f])*(;([a-z0-9_.!~*'():@&=+$,-]|%[0-9a-f][0-9a-f])*)*(/([a-z0-9_.!~*'():@&=+$,-]|%[0-9a-f][0-9a-f])*(;([a-z0-9_.!~*'():@&=+$,-]|%[0-9a-f][0-9a-f])*)*)*)?(\\?([a-z0-9_.!~*'();/?:@&=+$,-]|%[0-9a-f][0-9a-f])*)?(#([a-z0-9_.!~*'();/?:@&=+$,-]|%[0-9a-f][0-9a-f])*)?|(www|ftp)\\.(([a-z0-9]([a-z0-9-]*[a-z0-9])?)\\.)*([a-z]([a-z0-9-]*[a-z0-9])?)\\.?(:[0-9]+)?(/([-a-z0-9_.!~*'():@&=+$,]|%[0-9a-f][0-9a-f])*(;([-a-z0-9_.!~*'():@&=+$,]|%[0-9a-f][0-9a-f])*)*(/([-a-z0-9_.!~*'():@&=+$,]|%[0-9a-f][0-9a-f])*(;([-a-z0-9_.!~*'():@&=+$,]|%[0-9a-f][0-9a-f])*)*)*)?(\\?([-a-z0-9_.!~*'();/?:@&=+$,]|%[0-9a-f][0-9a-f])*)?(#([-a-z0-9_.!~*'();/?:@&=+$,]|%[0-9a-f][0-9a-f])*)?)[^].,:;!)? \t\r\n<>\"]"
+color body blue default "([a-z][a-z0-9+-]*://(((([a-z0-9_.!~*'();:&=+$,-]|%[0-9a-f][0-9a-f])*@)?((([a-z0-9]([a-z0-9-]*[a-z0-9])?)\\.)*([a-z]([a-z0-9-]*[a-z0-9])?)\\.?|[0-9]+\\.[0-9]+\\.[0-9]+\\.[0-9]+)(:[0-9]+)?)|([a-z0-9_.!~*'()$,;:@&=+-]|%[0-9a-f][0-9a-f])+)(/([a-z0-9_.!~*'():@&=+$,-]|%[0-9a-f][0-9a-f])*(;([a-z0-9_.!~*'():@&=+$,-]|%[0-9a-f][0-9a-f])*)*(/([a-z0-9_.!~*'():@&=+$,-]|%[0-9a-f][0-9a-f])*(;([a-z0-9_.!~*'():@&=+$,-]|%[0-9a-f][0-9a-f])*)*)*)?(\\?([a-z0-9_.!~*'();/?:@&=+$,-]|%[0-9a-f][0-9a-f])*)?(#([a-z0-9_.!~*'();/?:@&=+$,-]|%[0-9a-f][0-9a-f])*)?|(www|ftp)\\.(([a-z0-9]([a-z0-9-]*[a-z0-9])?)\\.)*([a-z]([a-z0-9-]*[a-z0-9])?)\\.?(:[0-9]+)?(/([-a-z0-9_.!~*'():@&=+$,]|%[0-9a-f][0-9a-f])*(;([-a-z0-9_.!~*'():@&=+$,]|%[0-9a-f][0-9a-f])*)*(/([-a-z0-9_.!~*'():@&=+$,]|%[0-9a-f][0-9a-f])*(;([-a-z0-9_.!~*'():@&=+$,]|%[0-9a-f][0-9a-f])*)*)*)?(\\?([-a-z0-9_.!~*'();/?:@&=+$,]|%[0-9a-f][0-9a-f])*)?(#([-a-z0-9_.!~*'();/?:@&=+$,]|%[0-9a-f][0-9a-f])*)?)[^].,:;!)? \t\r\n<>\"]"
 
 # Border lines
 
