--- a/.muttrc
+++ b/.muttrc
@@ -67,6 +67,7 @@ hdr_order from: to: cc: date: subject:  # and in this order
 # Yahoo
 set realname 							= "Rodrigo Pinto"
 set imap_user 						= "rodrigo_plp@yahoo.com"
+set imap_pass							= "budtyn-Vosdi0-vajvas"
 set imap_check_subscribed = yes
 set imap_list_subscribed 	= yes
 set imap_idle
@@ -104,11 +105,11 @@ set editor								= 'vim + -c "set textwidth=100" -c "set wrap"'
 
 # Index View Options ---------------------------------
 set date_format 		= "%e %b/%y %H:%M"
-set index_format 		= "[%Z]  %D  %-20.20F  %s"
-set sort 						= threads                         # like gmail
-set sort_aux 				= reverse-last-date-received  		# like gmail
-set uncollapse_jump                        						# don't collapse on an unread message
-set sort_re                                						# thread based on regex
+set index_format 		= "[%Z]%?X?@& ?  %D  %-30.50F  %s"	# Flags, attachments, date, sender and subject
+set sort 						= threads                         	# like gmail
+set sort_aux 				= reverse-last-date-received  			# like gmail
+set uncollapse_jump                        							# don't collapse on an unread message
+set sort_re                                							# thread based on regex
 set reply_regexp 		= "^(([Rr][Ee]?(\[[0-9]+\])?: *)?(\[[^]]+\] *)?)*"
 
 # Index Key Bindings ---------------------------------
@@ -162,99 +163,5 @@ bind attach <return> view-mailcap
 
 # Colors ---------------------------------------------
 
-color normal color245 default
-color error red default
-color tilde black default
-color message cyan default
-color markers red white
-color attachment green default
-color search brightmagenta default
-color status green black
-color indicator color033 default
-color tree green default
-
-# Basic monocolor screen
-
-mono bold bold
-mono underline underline
-mono indicator reverse
-mono error bold
-
-# Sidebar
-
-color sidebar_new green default
-color sidebar_divider green default
-color sidebar_indicator color033 default
-color sidebar_ordinary color242 default
-
-# Index
-
-color index red default "~A" 								# all messages
-color index brightred default "~E" 					# expired messages
-color index green default "~N" 							# new messages
-# color index blue default "~O" 						# old messages
-color index brightmagenta default "~Q" 			# messages that have been replied to
-color index color242 default "~R" 					# read messages
-color index green default "~U" 							# unread messages
-color index green default "~U~$" 						# unread, unreferenced messages
-color index brightyellow default "~v" 			# messages part of a collapsed thread
-# color index brightyellow default "~P" 			# messages from me
-# color index cyan default "~p!~F" 					# messages to me
-# color index cyan default "~N~p!~F" 					# new messages to me
-color index color028 default "~U~p!~F" 			# unread messages to me, dark green
-# color index green default "~R~p!~F" 			# messages to me
-color index red default "~F" 								# flagged messages
-color index red default "~F~p" 							# flagged messages to me
-color index red default "~N~F" 							# new flagged messages
-color index red default "~N~F~p" 						# new flagged messages to me
-color index red default "~U~F~p" 						# new flagged messages to me
-color index red default "~D" 								# deleted messages
-color index brightcyan default "~v~(!~N)" 	# collapsed thread with no unread
-color index yellow default "~v~(~N)" 				# collapsed thread with some unread
-color index green default "~N~v~(~N)" 			# collapsed thread with unread parent
-color index red black "~v~(~F)!~N" 					# collapsed thread with flagged, no unread
-color index yellow black "~v~(~F~N)" 				# collapsed thread with some unread & flagged
-color index color242 default "~N~v~(~F~N)" 	# collapsed thread with unread parent & flagged
-color index color242 default "~N~v~(~F)" 		# collapsed thread with unread parent, no unread inside, but some flagged
-color index cyan black "~v~(~p)" 						# collapsed thread with unread parent, no unread inside, some to me directly
-color index red default "~v~(~D)" 					# thread with deleted (doesn't differentiate between all or partial)
-color index_author color028 default '.*'		# dark green author name
-color index_flags color028 default '.*'			# dark green message flags
-
-# Message Headers
-
-color hdrdefault brightgreen default
-color header color242 default "^(From)"
-color header color242 default "^(To)"
-color header color242 default "^(Date)"
-color header color028 default "^(Subject)"
-
-# Body
-
-color quoted color172 default
-color quoted1 color130 default
-color quoted2 yellow default
-color quoted3 red default
-color quoted4 brightred default
-
-color signature brightgreen default
-color bold black default
-color underline black default
-
-# PGP
-
-color body red default "(BAD signature)"
-color body cyan default "(Good signature)"
-color body brightblack default "^gpg: Good signature .*"
-color body brightyellow default "^gpg: "
-color body brightyellow red "^gpg: BAD signature from.*"
-mono body bold "^gpg: Good signature"
-mono body bold "^gpg: BAD signature from.*"
-
-# URL Regex
-
-color body blue default "([a-z][a-z0-9+-]*://(((([a-z0-9_.!~*'();:&=+$,-]|%[0-9a-f][0-9a-f])*@)?((([a-z0-9]([a-z0-9-]*[a-z0-9])?)\\.)*([a-z]([a-z0-9-]*[a-z0-9])?)\\.?|[0-9]+\\.[0-9]+\\.[0-9]+\\.[0-9]+)(:[0-9]+)?)|([a-z0-9_.!~*'()$,;:@&=+-]|%[0-9a-f][0-9a-f])+)(/([a-z0-9_.!~*'():@&=+$,-]|%[0-9a-f][0-9a-f])*(;([a-z0-9_.!~*'():@&=+$,-]|%[0-9a-f][0-9a-f])*)*(/([a-z0-9_.!~*'():@&=+$,-]|%[0-9a-f][0-9a-f])*(;([a-z0-9_.!~*'():@&=+$,-]|%[0-9a-f][0-9a-f])*)*)*)?(\\?([a-z0-9_.!~*'();/?:@&=+$,-]|%[0-9a-f][0-9a-f])*)?(#([a-z0-9_.!~*'();/?:@&=+$,-]|%[0-9a-f][0-9a-f])*)?|(www|ftp)\\.(([a-z0-9]([a-z0-9-]*[a-z0-9])?)\\.)*([a-z]([a-z0-9-]*[a-z0-9])?)\\.?(:[0-9]+)?(/([-a-z0-9_.!~*'():@&=+$,]|%[0-9a-f][0-9a-f])*(;([-a-z0-9_.!~*'():@&=+$,]|%[0-9a-f][0-9a-f])*)*(/([-a-z0-9_.!~*'():@&=+$,]|%[0-9a-f][0-9a-f])*(;([-a-z0-9_.!~*'():@&=+$,]|%[0-9a-f][0-9a-f])*)*)*)?(\\?([-a-z0-9_.!~*'();/?:@&=+$,]|%[0-9a-f][0-9a-f])*)?(#([-a-z0-9_.!~*'();/?:@&=+$,]|%[0-9a-f][0-9a-f])*)?)[^].,:;!)? \t\r\n<>\"]"
-
-# Border lines
-
-color body blue default "( *[-+=#*~_]){6,}"
+source ~/.mutt/colors/colors-mac.muttrc
+# source ~/.mutt/colors/colors-pc.muttrc
