Vim: folding expr for tests. Mutt: minro changes.

--- a/.muttrc
+++ b/.muttrc
@@ -40,6 +40,7 @@ set sidebar_short_path
 set sidebar_delim_chars					= "/"
 set sidebar_folder_indent
 set sidebar_indent_string				= "  "
+set sidebar_sort_method		      = name
 
 # Status Bar -----------------------------------------
 set status_chars  = " *%A"
@@ -60,12 +61,11 @@ folder-hook YahooBR/* source ~/.mutt/accounts/yahoobr.muttrc
 folder-hook Gmail/* source ~/.mutt/accounts/gmail.muttrc
 macro index , "<enter-command>source ~/.mutt/accounts/gmail.muttrc<enter>"
 
-macro index <f4> '<sync-mailbox><enter-command> source ~/.mutt/accounts/yahoo.muttrc\ <enter><change-folder>!<enter>'
-macro index <f5> '<sync-mailbox><enter-command> source ~/.mutt/accounts/yahoobr.muttrc\ <enter><change-folder>!<enter>'
-macro index <f6> '<sync-mailbox><enter-command> source ~/.mutt/accounts/gmail.muttrc\ <enter><change-folder>!<enter>'
+macro index <f4> '<sync-mailbox><enter-command>source ~/.mutt/accounts/yahoo.muttrc<enter><change-folder>!<enter>'
+macro index <f5> '<sync-mailbox><enter-command>source ~/.mutt/accounts/yahoobr.muttrc<enter><change-folder>!<enter>'
+macro index <f6> '<sync-mailbox><enter-command>source ~/.mutt/accounts/gmail.muttrc<enter><change-folder>!<enter>'
 
 # Yahoo
-set sidebar_sort_method		= name
 set editor								= 'vim + -c "set textwidth=100" -c "set wrap"'
 set charset								= iso-8859-1
 
